# ATS_2023_openvino

./: .gitignore  CMakeLists.txt  README.md  WatchDDog.sh  auto_start.sh  debug.h  main.cpp
autoaim/: CMakeLists.txt  armor_tracker.cpp  armor_tracker.h  autoaim.cpp  autoaim.h
autoaim/detector/: inference.cpp  inference.h  tensorrt_infer.cpp
autoaim/predictor/: predictor.cpp
coordsolver/: coordsolver.cpp  coordsolver.h
general/: general.cpp  general.h
params/: camera0078.xml  cameraParams.xml  cameraParams_78.xml  coord_param.yaml
params/filter/: filter_param.yaml
serial/: serialport.cpp  serialport.h
thread/: thread.cpp  thread.h
